Had Updated the database and put in the identity add ons the new page

--- a/StoreFront.UI.MVC/appsettings.json
+++ b/StoreFront.UI.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StoreFront.UI.MVC-9b9d8ebe-ab22-4e02-bfb2-555c29d0e907;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=StoreFront2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
